Candy Crush project completed

--- a/Candy_Crash/index.html
+++ b/Candy_Crash/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whack A Mole</title>
+    <title>Candy Crash</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Whack a Mole</h1>
-    <h2 id="score">0</h2>
-    <!-- 3x3 -->
+    
+    <h1>Score : <span id="score">0</span></h1>
     <div id="board"></div>
 
     <script src="script.js"></script>
