Added restart button

--- a/Rock_Papper_Scissors/index.html
+++ b/Rock_Papper_Scissors/index.html
@@ -22,7 +22,10 @@
         </div>
         <div class="competitor_scores">
             <div class="score user_score"><span id="u_score">0</span></div>
-            <button class="start_btn">Start</button>
+            <div class="btn-container">
+                <button class="start_btn">Start</button>
+                <button class="reset_btn">Restart</button>
+            </div>
             <div class="score computer_score"><span id="c_score">0</span></div>
         </div>
         <div class="results">
