some details added

--- a/Rock_Papper_Scissors/index.html
+++ b/Rock_Papper_Scissors/index.html
@@ -13,12 +13,18 @@
             <h1>Rock Papper Scissors</h1>
         </div>
         <div class="competitors">
-            <div class="comp user"><img id="user-img" src="" alt=""></div>
+            <div class="user_header">
+                <span class="player-header user-head">USER</span>
+                <div class="comp user"><img id="user-img" src="" alt=""></div>
+            </div>
             <div class="round-div">
                 <span class="round-header">Round</span>
                 <div class="counter"><span id="round">0</span></div>
             </div>
-            <div class="comp computer"><img id="computer-img" src="" alt=""></div>
+            <div class="computer_header">
+                <span class="player-header computer-head">COMPUTER</span>
+                <div class="comp computer"><img id="computer-img" src="" alt=""></div>
+            </div>
         </div>
         <div class="competitor_scores">
             <div class="score user_score"><span id="u_score">0</span></div>
